sameer1472 from fiverr pushing design updates

--- a/sass/_cardAssets.scss
+++ b/sass/_cardAssets.scss
@@ -24,7 +24,7 @@ $transition: 0.25s;
 
 $primary-color: #000000;
 $secundary-color: #ffffff;
-$dark-color: #141B22;
+$dark-color: #090B0F;
 
 .assets{
     display: flex;
