--- a/sass/_cases.scss
+++ b/sass/_cases.scss
@@ -1,5 +1,6 @@
 @use "./fontweight" as fonts;
-
+$color-light: #787D80;
+$color-lighter:#DEDEDE;
 $width-card-std: 1100px;
 $height-card-std: $width-card-std*.2;
 $border-card-std: $width-card-std*0.018;
@@ -22,7 +23,7 @@ $box-shadow-min: 0px 0px $width-card-min*.15 rgba(0, 0, 0, 0.25);
 $image-std: $height-card-std*.5;
 $image-hd: $height-card-hd*.5;
 
-$font-pmin-std: 1rem;
+$font-pmin-std: 0.8rem;
 $font-pmin-hd: 1.25rem;
 $font-pmin-mobile: .875rem;
 
@@ -32,7 +33,7 @@ $font-h2-mobile: 1.5rem;
 
 $primary-color: #000000;
 $secundary-color: #ffffff;
-$dark-color: #141B22;
+$dark-color: #02080E;
 
 $transition: 0.25s;
 
@@ -55,6 +56,23 @@ $transition: 0.25s;
         align-items: center;
         gap: $gap-std;
         margin-bottom: $gap-std*2;
+        .dynamic-icon{
+            width: 170px;
+            margin-left: 60px;
+            svg{
+                width: 100%;
+            }
+         
+        }
+        .dynamic-icon-tall{
+            width: 170px;
+            margin-left: 60px;
+            svg{
+                width: 100%;
+                max-height: 120px;
+            }
+         
+        }
         @media (min-width: 1640px) and (orientation: landscape){
             gap: $gap-hd;
             margin-bottom: $gap-hd*2;
@@ -100,14 +118,12 @@ $transition: 0.25s;
             h2{
                 width: 30%;
                 text-align: center;
-                background: linear-gradient(90deg, #B3286B 25%, #4A2DFA 100%);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
                 font-weight: fonts.$font-weight-extrabold;
                 background-size:400% 400%;
                 font-size: $font-h2-std;
                 -webkit-animation:change 4s ease infinite;
                 animation:change 4s ease infinite;
+                color:$color-lighter;
                 @media (min-width: 1640px) and (orientation: landscape){
                     font-size: $font-h2-hd;
                 }
@@ -130,7 +146,7 @@ $transition: 0.25s;
                 }
             }
             p{
-                color: $secundary-color;
+                color: $color-lighter;
                 width: 60%;
                 padding: 0 5%;
                 font-size: $font-pmin-std;
