--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,7 +30,10 @@ body{
 }
 
 body.dark{
-    background-color: #090B0F;
+/* Rectangle 2207 */
+
+background: linear-gradient(209.75deg, rgba(0, 105, 55, 0.2) -2.17%, rgba(0, 0, 0, 0) 19.68%, rgba(0, 0, 0, 0) 19.68%), linear-gradient(180deg, rgba(46, 53, 71, 0) 6.39%, rgba(0, 0, 0, 0.3102) 10.29%, rgba(1, 1, 1, 0.5412) 13.69%, rgba(0, 0, 0, 0.66) 16.12%), linear-gradient(43.55deg, #344674 50.84%, rgba(0, 0, 0, 0) 105.99%);
+
 }
 
 
@@ -45,7 +48,7 @@ body.dark{
     .darkMode{
         display: inline;
     }
-}
+} 
 
 @-webkit-keyframes change{
     0%{background-position:0% 50%;}
@@ -57,4 +60,15 @@ body.dark{
     0%{background-position:0% 50%;}
     50%{background-position:100% 50%;}
     100%{background-position:0% 50%;}
+}
+
+
+
+
+.italic-text{
+    font-style: italic;
+}
+
+.semibold-text{
+    font-weight: fonts.$font-weight-semibold;
 }
