--- a/sass/_cases.scss
+++ b/sass/_cases.scss
@@ -61,6 +61,7 @@ $transition: 0.25s;
             margin-left: 60px;
             svg{
                 width: 100%;
+                height: 100%;
             }
          
         }
@@ -80,6 +81,20 @@ $transition: 0.25s;
         @media (max-width: 1250px) and (orientation: landscape){
             gap: $gap-min;
             margin-bottom: $gap-min*2;
+            .dynamic-icon {
+                margin-left: 2rem;
+                width: 130px;
+                height: 100%;
+            }
+            .dynamic-icon-tall{
+                margin-left: 2rem;
+                width: 130px;
+                svg{
+                    width: 100%;
+                    max-height: 100px;
+                }
+             
+            }
         }
 
         .cCases{
@@ -96,13 +111,29 @@ $transition: 0.25s;
             }
             @media (max-width: 600px) and (orientation: landscape){
                 flex-direction: column;
-                padding: $font-h2-mobile 0;
+                padding:30px;
                 height: auto;
+                .dynamic-icon{
+                    margin: 0;
+                    height: 50px;
+                }
+                .dynamic-icon-tall{
+                    margin: 0;
+                    height: 110px;
+                }
             }
             @media (max-width: 600px) and (orientation: portrait){
                 flex-direction: column;
-                padding: $font-h2-mobile 0;
+                padding:30px;
                 height: auto;
+                .dynamic-icon{
+                    margin: 0;
+                    height: 50px;
+                }
+                 .dynamic-icon-tall{
+                    margin: 0;
+                    height: 110px;
+                }
             }
 
             img{
