--- a/sass/style.css
+++ b/sass/style.css
@@ -831,6 +831,7 @@ body.dark .card p {
 }
 .groupCases .gCases .dynamic-icon svg {
   width: 100%;
+  height: 100%;
 }
 .groupCases .gCases .dynamic-icon-tall {
   width: 170px;
@@ -851,6 +852,19 @@ body.dark .card p {
     gap: 36px;
     margin-bottom: 72px;
   }
+  .groupCases .gCases .dynamic-icon {
+    margin-left: 2rem;
+    width: 130px;
+    height: 100%;
+  }
+  .groupCases .gCases .dynamic-icon-tall {
+    margin-left: 2rem;
+    width: 130px;
+  }
+  .groupCases .gCases .dynamic-icon-tall svg {
+    width: 100%;
+    max-height: 100px;
+  }
 }
 .groupCases .gCases .cCases {
   display: flex;
@@ -870,15 +884,31 @@ body.dark .card p {
 @media (max-width: 600px) and (orientation: landscape) {
   .groupCases .gCases .cCases {
     flex-direction: column;
-    padding: 1.5rem 0;
+    padding: 30px;
     height: auto;
+  }
+  .groupCases .gCases .cCases .dynamic-icon {
+    margin: 0;
+    height: 50px;
+  }
+  .groupCases .gCases .cCases .dynamic-icon-tall {
+    margin: 0;
+    height: 110px;
   }
 }
 @media (max-width: 600px) and (orientation: portrait) {
   .groupCases .gCases .cCases {
     flex-direction: column;
-    padding: 1.5rem 0;
+    padding: 30px;
     height: auto;
+  }
+  .groupCases .gCases .cCases .dynamic-icon {
+    margin: 0;
+    height: 50px;
+  }
+  .groupCases .gCases .cCases .dynamic-icon-tall {
+    margin: 0;
+    height: 110px;
   }
 }
 .groupCases .gCases .cCases img {
