--- a/sass/_cardAssets.scss
+++ b/sass/_cardAssets.scss
@@ -74,6 +74,7 @@ $dark-color: #090B0F;
         height: $height-card-std;
         box-shadow: $box-shadow-std;
         transition: $transition;
+        padding: 40px;
         /* background: $secundary-color; */
         &:hover{
             cursor: pointer;
@@ -111,7 +112,8 @@ $dark-color: #090B0F;
             box-shadow: $box-shadow-min;
         }
         img{
-            width: 95%;
+            width: 100%;
+            max-width: 250px;
         }
     }
 }
