--- a/sass/style.css
+++ b/sass/style.css
@@ -254,6 +254,11 @@ main .articleLeft .buttons {
   flex-direction: row;
   gap: 1.125rem;
 }
+@media screen and (min-width: 1921px) {
+  main .articleLeft .buttons {
+    margin-top: 50px;
+  }
+}
 @media (min-width: 1640px) and (orientation: landscape) {
   main .articleLeft .buttons {
     gap: 1.25rem;
